pkg/kgateway/translator/gateway/testutils/inputs/grpc-routing/https-listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
        - name: https
          kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: example-grpc-route
spec:
  parentRefs:
  - name: example-gateway
  rules:
  - matches:
    - method:
        service: "example.grpc.Service"
        method: "ExampleMethod"
    backendRefs:
    - name: example-grpc-svc
      port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: example-grpc-svc
spec:
  ports:
  - port: 9000
    name: grpc
    protocol: TCP
    targetPort: 9000
    appProtocol: kubernetes.io/h2c
  selector:
    app: example-grpc-app
