pkg/kgateway/translator/gateway/testutils/inputs/grpc-routing/multi-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-grpc-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: grpc
    port: 8090
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: example-grpc-multi-backend-route
spec:
  parentRefs:
  - name: example-grpc-gateway
  rules:
  - matches:
    - method:
        service: "example.multi.Service"
        method: "MultiMethod"
    backendRefs:
    - name: grpc-svc-1
      port: 9001
      weight: 50
    - name: grpc-svc-2
      port: 9002
      weight: 50
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc-1
spec:
  ports:
  - port: 9001
    name: grpc
    protocol: TCP
    targetPort: 9001
    appProtocol: kubernetes.io/h2c
  selector:
    app: grpc-app-1
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc-2
spec:
  ports:
  - port: 9002
    name: grpc
    protocol: TCP
    targetPort: 9002
    appProtocol: kubernetes.io/h2c
  selector:
    app: grpc-app-2
